preparing final steps before preparing v0.1.0 frontend

--- a/docs/v0.1.0-remaining.md
+++ b/docs/v0.1.0-remaining.md
@@ -1,3 +1,49 @@
+Phase 1: API Client (1-2 hours)
+
+ Create src/lib/api-client.ts
+ Create src/hooks/use-auth.ts
+ Create src/hooks/use-secrets.ts
+ Create src/hooks/use-releases.ts
+
+Phase 2: Core Pages (3-4 hours)
+
+ Create src/pages/AuthPage.tsx
+ Create src/pages/ApiKeysPage.tsx
+ Create src/pages/ReleasesPage.tsx
+ Create src/pages/ReleaseFormPage.tsx
+ Create src/pages/SettingsPage.tsx
+
+Phase 3: Layout & Components (2 hours)
+
+ Create src/components/layout/AppLayout.tsx
+ Create src/components/layout/PageHeader.tsx
+ Create src/components/secrets/SecretCard.tsx
+ Create src/components/releases/ReleaseCard.tsx
+
+Phase 4: Router Setup (30 mins)
+
+ Rewrite src/App.tsx with React Router
+ Add protected route wrapper
+ Test all routes
+
+Phase 5: Testing (1-2 hours)
+
+ Test auth flow (CLI → browser → validation)
+ Test secret CRUD
+ Test release CRUD
+ Test JWT expiration handling
+
+Phase 6: Deployment (30 mins)
+
+ Deploy to Cloudflare Workers
+ Verify health check
+ Test production auth flow
+ Verify database migrations ran
+
+---
+
+# NEWER, BETTER INFORMATION BELOW. overwrites the above is there is a conflict
+
 🎯 Refined Action Plan
 Phase 1: Foundation
 Create these files first:
